fixing tab alignment

--- a/style/about.css
+++ b/style/about.css
@@ -494,7 +494,7 @@ body {
         height: auto;
         margin-top: 8%;
         text-align: center;
-        margin-right: 0%;
+        margin-right: 20%;
     }
 }
 @media screen and (min-width: 481px) {
